<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Silence</string>
    <string name="contacted_main">Contacted</string>
    <string name="contacted_description">Allow calls from the numbers you have contacted.</string>
    <string name="contacted_call">Call</string>
    <string name="contacted_call_description">Allow calls from numbers you have called.</string>
    <string name="contacted_message">Message</string>
    <string name="contacted_message_description">Allow calls from numbers you have sent a message to.</string>
    <string name="contacted_answer">Answer</string>
    <string name="contacted_answer_description">Allow calls from numbers you have already answered.</string>
    <string name="groups_main">Groups</string>
    <string name="groups_description">Allow calls from numbers within the selected groups.</string>
    <string name="groups_local">Local</string>
    <string name="groups_local_description">Allow calls from numbers with the same country code as your.</string>
    <string name="groups_not_local">Not local</string>
    <string name="groups_not_local_description">Allow calls from numbers with country codes different from yours.</string>
    <string name="groups_toll_free">Toll-Free</string>
    <string name="groups_toll_free_description">Allow calls from Toll-Free numbers (ex 800).</string>
    <string name="groups_mobile">Mobile</string>
    <string name="groups_mobile_description">Allow calls from mobile numbers.</string>
    <string name="groups_local_mobile">Local &amp; Mobile</string>
    <string name="groups_local_mobile_description">Allow calls from mobile numbers with the same country code as your.</string>
    <string name="regex_main">Regex</string>
    <string name="regex_description">Process calls from numbers matching regular expression.</string>
    <string name="regex_pattern_hint">Pattern</string>
    <string name="regex_pattern_helper_text_allow">Allow calls from numbers matching regular expression.</string>
    <string name="regex_pattern_helper_text_block">Block calls from numbers matching regular expression.</string>
    <string name="regex_pattern_error">"Invalid regex!"</string>
    <string name="repeated_main">Repeated</string>
    <string name="repeated_description">Allow X registered call(s) from the same number within a set amount of minutes.</string>
    <string name="repeated_count">Count</string>
    <string name="repeated_minutes">Minutes</string>
    <string name="repeated_settings_description">Count has to be lower than minutes. Because Android caches the result, calls have to be out of the cache interval.</string>
    <string name="repeated_burst_timeout_hint">Timeout</string>
    <string name="repeated_burst_timeout_helper_text">Minimal timeout in seconds between repeated calls.</string>
    <string name="messages_main">Messages</string>
    <string name="messages_description">Allow calls from numbers found in messages.</string>
    <string name="messages_inbox">Inbox</string>
    <string name="messages_inbox_description">Allow calls from numbers that sent you a message.</string>
    <string name="messages_text">Text</string>
    <string name="messages_text_description">Temporarily allow calls from mobile numbers found in incoming messages text.</string>
    <string name="messages_text_ttl_hint">Time</string>
    <string name="messages_text_ttl_helper_text">How much time the number will be able to call you. Modifiers: [d]ays [h]ours [m]inutes</string>
    <string name="messages_text_ttl_error">7d / 48h / 120m</string>
    <string name="block_main">Block</string>
    <string name="block_description">Block all incoming calls. To also block numbers from contacts you have to grant a permission.</string>
    <string name="sim">SIM</string>
    <string name="sim_1">SIM 1</string>
    <string name="sim_1_description">Allow all calls from SIM 1.</string>
    <string name="sim_2">SIM 2</string>
    <string name="sim_2_description">Allow all calls from SIM 2.</string>
    <string name="extra">Extra</string>
    <string name="extra_contacts">Contacts</string>
    <string name="extra_contacts_description">Allow calls from numbers in your contacts.</string>
    <string name="extra_unknown_numbers">Unknown numbers</string>
    <string name="extra_unknown_numbers_description">Allow calls from strangers without a number.</string>
    <string name="extra_short_numbers">Short numbers</string>
    <string name="extra_short_numbers_description">Allow calls from numbers with length from 3 up to 5 digits.</string>
    <string name="extra_plus_numbers">Plus numbers</string>
    <string name="extra_plus_numbers_description">Allow calls from numbers not starting with a plus.</string>
    <string name="extra_stir">STIR/SHAKEN</string>
    <string name="extra_stir_description">Allow calls from numbers passing STIR verification.</string>
    <string name="settings">Settings</string>
    <string name="settings_controller">Controller</string>
    <string name="settings_controller_description">Enable broadcast receiver to control Silence with intents.</string>
    <string name="settings_disallow_call">Disallow call</string>
    <string name="settings_disallow_call_description">Sets whether the incoming call should be blocked.</string>
    <string name="settings_reject_call">Reject call</string>
    <string name="settings_reject_call_description">Sets whether the incoming call should be disconnected as if the user had manually rejected it. This should only be checked if the call is disallowed.</string>
    <string name="settings_silence_call">Silence call</string>
    <string name="settings_silence_call_description">Sets whether ringing should be silenced for the incoming call. The call will, however, still be sent to the default dialer app if it is not blocked. Checking this only makes sense when the call has not been disallowed.</string>
    <string name="settings_skip_call_log">Skip call log</string>
    <string name="settings_skip_call_log_description">Sets whether the incoming call should not be displayed in the call log. This should only be checked if the call is disallowed. Calls will still be logged with type BLOCKED_TYPE.</string>
    <string name="settings_skip_notification">Skip notification</string>
    <string name="settings_skip_notification_description">Sets whether a missed call notification should not be shown for the incoming call. This should only be checked if the call is disallowed.</string>
    <string name="panic_app_dialog_title">Confirm panic app</string>
    <string name="panic_app_dialog_message">Are you sure you want to allow %1$s to trigger destructive panic actions\?</string>
    <string name="panic_app_unknown_app">an unknown app</string>
    <string name="allow">Allow</string>
    <string name="block">Block</string>
    <string name="notification_channel">Blocked calls</string>
    <string name="notification_title">Blocked call</string>
    <string name="goto_button">GOTO</string>
    <string name="extra_description">Allow calls from some miscellaneous groups/identifiers.</string>
    <string name="sim_description">Process all calls from one or both SIM cards.</string>
    <string name="back">Back</string>
    <string name="toggle_off">Off</string>
    <string name="toggle_on">On</string>
</resources>