<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ExtraFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:text="@string/extra_contacts" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/extra_contacts_description"
                android:textAppearance="?attr/textAppearanceBodySmall" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" />

            <CheckBox
                android:id="@+id/shortNumbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:text="@string/extra_short_numbers" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/extra_short_numbers_description"
                android:textAppearance="?attr/textAppearanceBodySmall" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" />

            <CheckBox
                android:id="@+id/unknownNumbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:text="@string/extra_unknown_numbers" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/extra_unknown_numbers_description"
                android:textAppearance="?attr/textAppearanceBodySmall" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" />

            <CheckBox
                android:id="@+id/plusNumbers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/extra_plus_numbers"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/extra_plus_numbers_description"
                android:textAppearance="?attr/textAppearanceBodySmall" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" />

            <CheckBox
                android:id="@+id/stir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/extra_stir"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/extra_stir_description"
                android:textAppearance="?attr/textAppearanceBodySmall" />
            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:text="Allow By Pattern"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Allow phone number matching regular expression."
                android:textAppearance="?attr/textAppearanceBodySmall" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutRegexAllow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/groups_match_regex_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInputRegexAllow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textAppearance="?attr/textAppearanceCaption" />
            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:text="@string/groups_match_regex"
                android:textAppearance="?attr/textAppearanceBodyLarge" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/groups_match_regex_description"
                android:textAppearance="?attr/textAppearanceBodySmall" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtLayoutRegexBlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/groups_match_regex_hint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtInputRegexBlock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textAppearance="?attr/textAppearanceCaption" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--button to hide our key board-->
            <Button
                android:id="@+id/hideBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="Hide Key Board"
                android:textAllCaps="false" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>